--- a/Feedbacksystem/templates/pages/faculty_evaluations_summary_report.html
+++ b/Feedbacksystem/templates/pages/faculty_evaluations_summary_report.html
@@ -38,7 +38,7 @@
                 <th>Sample Size</th>
                 <th>Subject Matter Content</th>
                 <th>Organization</th>
-                <th>Teacher-Student Rapport</th>
+                <th style="font-size: 0.7em;">Teacher-Student Rapport</th>
                 <th>Teaching Methods</th>
                 <th>Presentation</th>
                 <th>Classroom Management</th>
