--- a/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
@@ -120,6 +120,8 @@
       <form method="get" action="">
         {{faculty_evaluation_filter.form.subject.label_tag}}
         {{faculty_evaluation_filter.form.subject}}
+        {{faculty_evaluation_filter.form.rating_category.label_tag}}
+        {{faculty_evaluation_filter.form.rating_category}}
         {{faculty_evaluation_filter.form.predicted_sentiment.label_tag}}
         {{faculty_evaluation_filter.form.predicted_sentiment}}
         {{faculty_evaluation_filter.form.academic_year.label_tag}}
