--- a/Feedbacksystem/templates/pages/editsection.html
+++ b/Feedbacksystem/templates/pages/editsection.html
@@ -20,15 +20,9 @@
             </div>
     
         <div class="form-group">
-            {{ form.subjects.label_tag }}
-            <div class="checkbox-list">
-                {% for subject in form.subjects %}
-                    <div class="form-check">
-                    {{ subject }}
-                    </div>
-                {% endfor %}
+            {{ form.course.label_tag }}
+            {{ form.course }}
             </div>
-        </div>
     
     
     <input type = "submit" value="Save changes" class="btn btn-warning custom-btn" style="margin-top: 1em;">
