--- a/Feedbacksystem/templates/pages/stakeholderevaluations.html
+++ b/Feedbacksystem/templates/pages/stakeholderevaluations.html
@@ -72,24 +72,22 @@
     <div class="table-responsive mt-2 ">
       <table class="table table-bordered table-responsive">
           <tr>
+              <th  scope="col">Agency</th>
               <th  scope="col">Date of Visit</th>
-              <th  scope="col">Purpose of Visit</th>
-              <th  scope="col">Average Rating</th>
+              <th  scope="col">Average</th>
+              <th  scope="col">Rating</th>
               <th  scope="col">Comments/Suggestions</th>
               <th  scope="col">Polarity </th>
-              <th  scope="col">Academic Year </th>
-              <th  scope="col">Semester </th>
               <th  scope="col">Options </th>
           </tr>
           {% for i in page_obj %}
           <tr>
+              <td>{{ i.agency }} </td>
               <td>{{ i.date }} </td>
-              <td>{{ i.purpose }}</td>
               <td>{{ i.average_rating }}</td>
+              <td>{{ i.get_rating_category }}</td>
               <td>{{ i.suggestions_and_comments|truncatechars:50 }}</td>
               <td>{{ i.predicted_sentiment }}</td>
-              <td>{{ i.academic_year }}</td>
-              <td>{{ i.semester }}</td>
               <td style="display: flex; flex-direction: row; align-items: center;">
                 <a href="{% url 'admin_view_stakeholder_form' i.pk %}" style="margin-right: 10px; text-decoration: none;">
                   <button class="btn btn-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px">
